--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
         <h1>NOTICIAS I.PESOA</h1>
     </header>
 
-    <!-- Enlaces Públicos (Ejemplo) -->
+    <!-- Enlaces Públicos -->
     <nav class="public-links">
-        <a href="https://etsy.com/tu-tienda" target="_blank">Artículos Públicos</a>
+        <a href="/articulos-publicos.html">Artículos Públicos</a>
         <span class="separator">/</span>
-        <a href="https://ebay.com/tu-tienda" target="_blank">Editorial (Venta)</a>
+        <a href="/editorial.html">Editorial</a>
         <span class="separator">/</span>
-        <!-- Esto podría ser un enlace a una página pública normal o un blog -->
-        <a href="/p/ultima-noticia-publica.html">Última Noticia</a> 
+        <a href="/p/ultima-noticia-publica.html">Última Noticia</a>
     </nav>
 
     <!-- Zona Central: Código -->
