--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Encabezado / Título -->
     <header>
-        <h1>NOTICIAS I.PESOA</h1>
+        <h1>EDITORIAL I.PESOA</h1>
     </header>
 
     <!-- Enlaces Públicos -->
