--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editorial I.Pesoa</title>
+    <title>Noticias I.Pesoa</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <!-- Encabezado / Título -->
     <header>
-        <h1>EDITORIAL I.PESOA</h1>
+        <h1>NOTICIAS I.PESOA</h1>
     </header>
 
     <!-- Enlaces Públicos -->
@@ -29,6 +29,10 @@
             <button id="goBtn">→</button>
         </div>
         <p class="instruction">Introduce el código para acceder al contenido privado.</p>
+
+        <!-- Imagen añadida -->
+        <img src="images/jarron.png" alt="Jarrón" class="main-image">
+
         <div id="error-msg" class="hidden">Código no válido o no encontrado.</div>
     </main>
 
