--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <p class="instruction">Introduce el código para acceder al contenido privado.</p>
 
         <!-- Imagen añadida -->
-        <img src="images/jarron.png" alt="Jarrón" class="main-image">
+        <img src="jarron.png" alt="Jarrón" class="main-image">
+
 
         <div id="error-msg" class="hidden">Código no válido o no encontrado.</div>
     </main>
