--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <!-- Encabezado / Título -->
+    <!-- Encabezado -->
     <header>
         <h1>EDITORIAL I.PESOA</h1>
     </header>
@@ -20,6 +20,8 @@
         <a href="/editorial.html">Editorial</a>
         <span class="separator">/</span>
         <a href="/p/ultima-noticia-publica.html">Última Noticia</a>
+        <span class="separator">/</span>
+        <a href="/contacto.html">Contacto</a>
     </nav>
 
     <!-- Zona Central: Código -->
@@ -28,11 +30,11 @@
             <input type="text" id="codeInput" placeholder="Insertar código..." autocomplete="off">
             <button id="goBtn">→</button>
         </div>
+
         <p class="instruction">Introduce el código para acceder al contenido privado.</p>
 
         <!-- Imagen añadida -->
         <img src="jarron.png" alt="Jarrón" class="main-image">
-
 
         <div id="error-msg" class="hidden">Código no válido o no encontrado.</div>
     </main>
