--- a/contacto.html
+++ b/contacto.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <title>Contacto - Editorial I.Pesoa</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-    <h1>CONTACTO</h1>
+    <h1>EDITORIAL I.PESOA</h1>
 </header>
 
-<nav class="public-links">
-    <a href="/index.html">Volver a Inicio</a>
-</nav>
-
 <main class="code-container">
-    <form action="mailto:i.pesoa@protonmail.com" method="POST" enctype="text/plain" class="contact-form">
-        <textarea name="mensaje" placeholder="Escribe tu mensaje..." required></textarea>
+    <h2>Contacto</h2>
+    
+    <form action="https://formspree.io/f/xgvgnrlw" method="POST" class="contact-form">
+        <textarea name="message" placeholder="Escribe tu mensaje..." required></textarea>
         <button type="submit">Enviar</button>
     </form>
+
+    <p><a href="index.html">Volver a la página principal</a></p>
 </main>
 
 </body>
