--- a/articulos-publicos.html
+++ b/articulos-publicos.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artículos Públicos - Editorial I.Pesoa</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header>
@@ -15,11 +13,12 @@
 </header>
 
 <main class="code-container">
-    <h2>Nuntius Fluctibus Commissus</h2>
-    <p>Mensaje confiado a las olas. Dibuja aquí y envíalo para nuestra futura exposición.</p>
-
-    <!-- Link hacia la subpágina del proyecto de dibujo -->
-    <p><a href="polis-paint.html">Ir a Polis Paint</a></p>
+    <!-- Entrada -->
+    <p>
+        <a href="polis-paint.html">
+            Nuntius Fluctibus Commissus (Mensaje confiado a las olas)
+        </a>
+    </p>
 
     <!-- Volver a la página principal -->
     <p><a href="index.html">Volver a la página principal</a></p>
