--- a/contacto.html
+++ b/contacto.html
@@ -14,11 +14,7 @@
 
 <main class="code-container">
     <form action="https://formspree.io/f/xgvgnrlw" method="POST" class="contact-form">
-        <textarea name="message" placeholder="Escribe tu mensaje aquí..." required></textarea>
-        <p style="font-size:0.7rem; color:var(--accent-color); text-align:center;">
-            (Añade dirección de respuesta si deseas que te contestemos)
-        </p>
-        <input type="text" name="_replyto" placeholder="Tu email (opcional)">
+        <textarea name="message" placeholder="Escribe tu mensaje aquí... (opcionalmente añade tu email para que te contestemos)" required></textarea>
         <button type="submit">Enviar</button>
     </form>
 
