--- a/polis-paint.html
+++ b/polis-paint.html
@@ -58,7 +58,7 @@
     <!-- Formulario que envía el dibujo a tu email -->
     <form id="drawing-form" action="https://formspree.io/f/xgvgnrlw" method="POST">
         <input type="hidden" name="drawing" id="drawing-input">
-        <button type="submit">Lanza tu mensaje al mar</button>
+        <button type="submit">Lanzar tu mensaje/dibujo al mar</button>
     </form>
 
     <p><a href="articulos-publicos.html">Volver a Artículos Públicos</a></p>
