--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <span class="separator">/</span>
         <a href="/p/ultima-noticia-publica.html">Última Noticia</a>
         <span class="separator">/</span>
+        <a href="/lamparavirtual.html">Lámpara Virtual</a>
+        <span class="separator">/</span>
         <a href="/contacto.html">Contacto</a>
     </nav>
 
