--- a/lamparavirtual.html
+++ b/lamparavirtual.html
@@ -4,66 +4,58 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Silencio Virtual</title>
+<link rel="stylesheet" href="style.css">
 <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
-<style>
-  html, body {
-    margin:0; padding:0;
-    width:100%; height:100%;
-    background:#111;
-    display:flex; flex-direction:column;
-    align-items:center; justify-content:center;
-    color:#fff;
-    font-family:sans-serif;
-  }
-  #sketch-holder {
-    flex:1;
-    display:flex; align-items:center; justify-content:center;
-    width:100%; height:100%;
-  }
-  #botonEditorial {
-    position: fixed;
-    bottom: 20px;
-    padding: 6px 18px;
-    border: 1px solid #fff;
-    background: transparent;
-    color: #fff;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-  #botonEditorial:hover {
-    background: #fff;
-    color: #111;
-  }
-</style>
 </head>
 <body>
+
+<header>
+  <h1>EDITORIAL I.PESOA</h1>
+</header>
 
 <div id="sketch-holder"></div>
 <button id="botonEditorial">i.pesoa</button>
 
 <script>
-// Lista de archivos de animaciones
+// Definir animaciones como funciones de p5
 const animaciones = [
-  "animacion1.js",
-  "animacion2.js",
-  "animacion3.js"
+  function(p) { // animacion1
+    let t = 0;
+    p.setup = function() {
+      p.createCanvas(600, 600, p.WEBGL);
+      p.colorMode(p.HSB, 360, 100, 100);
+      p.noFill();
+    }
+    p.draw = function() {
+      p.background(255);
+      let r = 70 + 30 * Math.sin(t);
+      let yPos = 0 + 200 * Math.sin(t*0.5);
+      let hue = (t*50) % 360;
+      p.stroke(hue, 100, 100);
+      let lw = 1 + 8 * Math.sin(t*0.3);
+      p.strokeWeight(lw);
+      p.beginShape();
+      for(let i=0;i<100;i++){
+        let angle = p.map(i,0,100,0,p.TWO_PI);
+        let x = r * Math.cos(angle);
+        let z = r * Math.sin(angle);
+        p.vertex(x,yPos,z);
+      }
+      p.endShape(p.CLOSE);
+      t += 0.01;
+    }
+  },
+  function(p) { /* animacion2 */ },
+  function(p) { /* animacion3 */ }
 ];
 
 let currentSketch;
 
 // Función para cargar animación aleatoria
 function cargarAnimacion() {
-  const indice = Math.floor(Math.random() * animaciones.length);
-
-  // Elimina animación anterior
+  const indice = Math.floor(Math.random()*animaciones.length);
   if(currentSketch) currentSketch.remove();
-
-  // Crea nueva instancia p5
-  currentSketch = new p5(s => {
-    const script = document.createElement('script');
-    script.src = "animaciones/" + animaciones[indice];
-    document.body.appendChild(script);
-  }, 'sketch-holder');
+  currentSketch = new p5(animaciones[indice], 'sketch-holder');
 }
 
 // Carga inicial
