--- a/lamparavirtual.html
+++ b/lamparavirtual.html
@@ -7,14 +7,24 @@
 <link rel="stylesheet" href="style.css">
 <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
 <style>
-  /* Ajuste específico para que el canvas no cubra el botón */
+  html, body {
+    margin:0; padding:0;
+    width:100%; height:100%;
+    background:#fff;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    font-family:sans-serif;
+  }
+
   #sketch-holder {
-    flex: 1;
-    width: 100%;
-    height: calc(100vh - 80px); /* espacio para el botón abajo */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    flex:1;
+    width:100%;
+    height:calc(100vh - 80px); /* espacio para el botón abajo */
+    display:flex;
+    align-items:center;
+    justify-content:center;
   }
 
   #botonEditorial {
@@ -27,9 +37,11 @@
     background: transparent;
     color: #000;
     cursor: pointer;
-    text-transform: uppercase;
-    transition: all 0.3s ease;
     font-family: sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 6px; /* igual que el header */
+    transition: all 0.3s ease;
   }
 
   #botonEditorial:hover {
@@ -40,48 +52,54 @@
 </head>
 <body>
 
-
-
-<main class="code-container">
-    <div id="sketch-holder"></div>
-</main>
-
+<div id="sketch-holder"></div>
 <button id="botonEditorial">EDITORIAL I.PESOA</button>
 
 <script>
+// Array de animaciones como funciones de p5
 const animaciones = [
-    // Nombres de tus archivos JS que contengan la animación
-    "animacion1.js"
+  function(p) {
+    let t = 0;
+    p.setup = function() {
+      p.createCanvas(p.select('#sketch-holder').width, p.select('#sketch-holder').height, p.WEBGL);
+      p.colorMode(p.HSB, 360, 100, 100);
+      p.noFill();
+    }
+    p.draw = function() {
+      p.background(255); // fondo blanco
+      let r = 70 + 30 * Math.sin(t);
+      let y = 0 + 200 * Math.sin(t*0.5);
+      let hue = (t*50) % 360;
+      p.stroke(hue, 100, 100);
+      let lw = 1 + 8 * Math.sin(t*0.3);
+      p.strokeWeight(lw);
+      p.beginShape();
+      for(let i=0;i<100;i++){
+        let angle = p.map(i,0,100,0,p.TWO_PI);
+        let x = r * Math.cos(angle);
+        let z = r * Math.sin(angle);
+        p.vertex(x,y,z);
+      }
+      p.endShape(p.CLOSE);
+      t += 0.01;
+    }
+  }
 ];
 
 let currentSketch;
 
 function cargarAnimacion() {
-    const indice = Math.floor(Math.random() * animaciones.length);
-
-    if(currentSketch) currentSketch.remove();
-
-    currentSketch = new p5((p) => {
-        p.setup = function() {
-            p.createCanvas(p.select('#sketch-holder').width, p.select('#sketch-holder').height, p.WEBGL);
-            p.colorMode(p.HSB, 360, 100, 100);
-            p.noFill();
-        }
-        p.draw = function() {
-            p.background(255); // fondo blanco
-            // Aquí puedes poner una animación por defecto o llamarla desde archivo
-        }
-    }, 'sketch-holder');
+  const indice = Math.floor(Math.random() * animaciones.length);
+  if(currentSketch) currentSketch.remove();
+  currentSketch = new p5(animaciones[indice], 'sketch-holder');
 }
 
 // Carga inicial
 cargarAnimacion();
 
-// Botón con cambio de texto al pasar cursor
+// Botón vuelve al index
 const boton = document.getElementById('botonEditorial');
-boton.addEventListener('mouseenter', () => boton.textContent = "VOLVER");
-boton.addEventListener('mouseleave', () => boton.textContent = "EDITORIAL I.PESOA");
-boton.addEventListener('click', () => cargarAnimacion());
+boton.addEventListener('click', () => window.location.href = '/');
 </script>
 
 </body>
