--- a/lamparavirtual.html
+++ b/lamparavirtual.html
@@ -20,7 +20,8 @@
 // Lista de archivos en la carpeta "animaciones" (agrega aquí tus .js)
 const archivosAnimaciones = [
   'animaciones/animacion1.js',
-  'animaciones/animacion2.js'
+  'animaciones/animacion2.js',
+  'animaciones/animacion3.js'
 ];
 
 let currentSketch;
