--- a/lamparavirtual.html
+++ b/lamparavirtual.html
@@ -21,6 +21,7 @@
 const archivosAnimaciones = [
   'animaciones/animacion1.js',
   'animaciones/animacion2.js',
+  'animaciones/animacion3.js',
   'animaciones/animacion3.js'
 ];
 
