--- a/articulos-publicos.html
+++ b/articulos-publicos.html
@@ -3,8 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artículos Públicos - Editorial I.Pesoa</title>
+    <title>Nuntius Fluctibus Commissus - Editorial I.Pesoa</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
+    <style>
+        .code-container h2 {
+            margin-bottom: 0.2rem;
+        }
+        .code-container p {
+            margin-top: 0.1rem;
+            margin-bottom: 1.5rem;
+            font-size: 0.9rem;
+            color: var(--accent-color);
+        }
+        .drawing-area {
+            width: 400px;
+            height: 500px;
+            border: 2px dashed var(--text-color);
+            margin-bottom: 1rem;
+        }
+        button {
+            background-color: var(--text-color);
+            color: var(--bg-color);
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-family: var(--font-main);
+            font-size: 1rem;
+            transition: all 0.3s;
+        }
+        button:hover {
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            border: 2px solid var(--text-color);
+        }
+        a {
+            margin-top: 1.5rem;
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
 
@@ -13,16 +50,45 @@
 </header>
 
 <main class="code-container">
-    <!-- Entrada -->
-    <p>
-        <a href="polis-paint.html">
-            Nuntius Fluctibus Commissus (Mensaje confiado a las olas)
-        </a>
-    </p>
 
-    <!-- Volver a la página principal -->
-    <p><a href="index.html">Volver a la página principal</a></p>
+    <!-- 🔗 NUEVO ENLACE A APOLLINARE EFÍMERO -->
+    <p><a href="apollinareefimero.html">Apollinare Efímero</a></p>
+
+    <h2>Nuntius Fluctibus Commissus</h2>
+    <p>(Mensaje confiado a las olas)</p>
+
+    <div id="sketch-holder" class="drawing-area"></div>
+
+    <form id="drawing-form" action="https://formspree.io/f/xgvgnrlw" method="POST">
+        <input type="hidden" name="drawing" id="drawing-input">
+        <button type="submit">Lanzar tu mensaje/dibujo al mar</button>
+    </form>
+
+    <p><a href="articulos-publicos.html">Volver a Artículos Públicos</a></p>
 </main>
+
+<script>
+let canvas;
+
+function setup() {
+    canvas = createCanvas(400, 500);
+    canvas.parent('sketch-holder');
+    background(255);
+    stroke(0);
+    strokeWeight(2);
+}
+
+function draw() {
+    if (mouseIsPressed) {
+        line(pmouseX, pmouseY, mouseX, mouseY);
+    }
+}
+
+document.getElementById('drawing-form').addEventListener('submit', function(e) {
+    const dataURL = canvas.elt.toDataURL("image/png");
+    document.getElementById('drawing-input').value = dataURL;
+});
+</script>
 
 </body>
 </html>
