--- a/articulos-publicos.html
+++ b/articulos-publicos.html
@@ -1,94 +1,79 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuntius Fluctibus Commissus - Editorial I.Pesoa</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
-    <style>
-        .code-container h2 {
-            margin-bottom: 0.2rem;
-        }
-        .code-container p {
-            margin-top: 0.1rem;
-            margin-bottom: 1.5rem;
-            font-size: 0.9rem;
-            color: var(--accent-color);
-        }
-        .drawing-area {
-            width: 400px;
-            height: 500px;
-            border: 2px dashed var(--text-color);
-            margin-bottom: 1rem;
-        }
-        button {
-            background-color: var(--text-color);
-            color: var(--bg-color);
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-family: var(--font-main);
-            font-size: 1rem;
-            transition: all 0.3s;
-        }
-        button:hover {
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            border: 2px solid var(--text-color);
-        }
-        a {
-            margin-top: 1.5rem;
-            display: inline-block;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Artículos Públicos - Editorial I.PESOA</title>
+<style>
+  body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+  }
+
+  header {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+
+  h1 {
+    letter-spacing: 6px;
+  }
+
+  .articulos {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 2rem;
+  }
+
+  .articulos a {
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
+    font-size: 1.2rem;
+    transition: all 0.3s;
+  }
+
+  .articulos a:hover {
+    color: #555;
+  }
+
+  #volver {
+    padding: 8px 20px;
+    border: 1px solid #000;
+    background: transparent;
+    color: #000;
+    cursor: pointer;
+    font-weight: bold;
+    letter-spacing: 4px;
+    transition: all 0.3s;
+  }
+
+  #volver:hover {
+    background: #000;
+    color: #fff;
+  }
+</style>
 </head>
 <body>
 
 <header>
-    <h1>EDITORIAL I.PESOA</h1>
+  <h1>EDITORIAL I.PESOA</h1>
 </header>
 
-<main class="code-container">
+<main>
+  <div class="articulos">
+    <a href="polis-paint.html">Nuntius Fluctibus Commissus (mensaje al mar)</a>
+    <a href="apollinareefimero.html">Apollinare Efímero</a>
+  </div>
 
-    <!-- 🔗 NUEVO ENLACE A APOLLINARE EFÍMERO -->
-    <p><a href="apollinareefimero.html">Apollinare Efímero</a></p>
-
-    <h2>Nuntius Fluctibus Commissus</h2>
-    <p>(Mensaje confiado a las olas)</p>
-
-    <div id="sketch-holder" class="drawing-area"></div>
-
-    <form id="drawing-form" action="https://formspree.io/f/xgvgnrlw" method="POST">
-        <input type="hidden" name="drawing" id="drawing-input">
-        <button type="submit">Lanzar tu mensaje/dibujo al mar</button>
-    </form>
-
-    <p><a href="articulos-publicos.html">Volver a Artículos Públicos</a></p>
+  <button id="volver" onclick="window.location.href='index.html'">VOLVER</button>
 </main>
-
-<script>
-let canvas;
-
-function setup() {
-    canvas = createCanvas(400, 500);
-    canvas.parent('sketch-holder');
-    background(255);
-    stroke(0);
-    strokeWeight(2);
-}
-
-function draw() {
-    if (mouseIsPressed) {
-        line(pmouseX, pmouseY, mouseX, mouseY);
-    }
-}
-
-document.getElementById('drawing-form').addEventListener('submit', function(e) {
-    const dataURL = canvas.elt.toDataURL("image/png");
-    document.getElementById('drawing-input').value = dataURL;
-});
-</script>
 
 </body>
 </html>
